// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance default w/ error 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Problem field
    </div>
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-in6gqi=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            />
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-wvt485=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        data-css-1ha66tv=""
      >
        <div
          data-css-7dab2f=""
        >
          <svg
            aria-label="warning icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              clipRule="evenodd"
              d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots appearance gaps 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div>
    <div>
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
      >
        <div
          data-css-dysqqm=""
        >
          Problem field
        </div>
        <div
          data-css-8u2q7u=""
        >
          <div
            data-css-ctre2o=""
          >
            <div
              data-css-ne3jjf=""
            >
              <button
                data-css-i9dafq=""
                disabled={false}
                onClick={[Function]}
              >
                <span
                  aria-hidden={true}
                  data-css-1pnvt9=""
                />
                <span
                  data-css-1yk08w2=""
                />
              </button>
              <div
                data-css-wvt485=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.5 14L8 10h9z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
    <div>
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
      >
        <div
          data-css-dysqqm=""
        >
          Problem field
        </div>
        <div
          data-css-8u2q7u=""
        >
          <div
            data-css-in6gqi=""
          >
            <div
              data-css-ne3jjf=""
            >
              <button
                data-css-i9dafq=""
                disabled={false}
                onClick={[Function]}
              >
                <span
                  aria-hidden={true}
                  data-css-1pnvt9=""
                />
                <span
                  data-css-1yk08w2=""
                />
              </button>
              <div
                data-css-wvt485=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.5 14L8 10h9z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            data-css-1ha66tv=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="warning icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  clipRule="evenodd"
                  d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </label>
    </div>
    <div>
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
      >
        <div
          data-css-dysqqm=""
        >
          Problem field
        </div>
        <div
          data-css-8u2q7u=""
        >
          <div
            data-css-ctre2o=""
          >
            <div
              data-css-ne3jjf=""
            >
              <button
                data-css-1xu7t6b=""
                disabled={false}
                onClick={[Function]}
              >
                <span
                  aria-hidden={true}
                  data-css-1pnvt9=""
                />
                <span
                  data-css-4goio8=""
                />
              </button>
              <div
                data-css-kojjpx=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.5 14L8 10h9z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
    <div>
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
      >
        <div
          data-css-dysqqm=""
        >
          Problem field
        </div>
        <div
          data-css-8u2q7u=""
        >
          <div
            data-css-in6gqi=""
          >
            <div
              data-css-ne3jjf=""
            >
              <button
                data-css-1xu7t6b=""
                disabled={false}
                onClick={[Function]}
              >
                <span
                  aria-hidden={true}
                  data-css-1pnvt9=""
                />
                <span
                  data-css-4goio8=""
                />
              </button>
              <div
                data-css-kojjpx=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.5 14L8 10h9z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            data-css-1ha66tv=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="warning icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  clipRule="evenodd"
                  d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots appearance medium default 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              The placeholder 
            </span>
            <span
              data-css-1yk08w2=""
            >
              The placeholder 
            </span>
          </button>
          <div
            data-css-wvt485=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots appearance medium subtle 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-1xu7t6b=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              The placeholder 
            </span>
            <span
              data-css-4goio8=""
            >
              The placeholder 
            </span>
          </button>
          <div
            data-css-kojjpx=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots appearance small default 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-kcavkk=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              The placeholder 
            </span>
            <span
              data-css-iff4wh=""
            >
              The placeholder 
            </span>
          </button>
          <div
            data-css-wvt485=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots appearance small subtle 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-uxc8uo=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              The placeholder 
            </span>
            <span
              data-css-1fqmm62=""
            >
              The placeholder 
            </span>
          </button>
          <div
            data-css-kojjpx=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots appearance subtle w/ error 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Problem field
    </div>
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-in6gqi=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-1xu7t6b=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            />
            <span
              data-css-4goio8=""
            />
          </button>
          <div
            data-css-kojjpx=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        data-css-1ha66tv=""
      >
        <div
          data-css-7dab2f=""
        >
          <svg
            aria-label="warning icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              clipRule="evenodd"
              d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots disabled compare 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div>
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-dysqqm=""
      >
        Normal
      </div>
      <div
        data-css-8u2q7u=""
      >
        <div
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              data-css-i9dafq=""
              disabled={false}
              onClick={[Function]}
            >
              <span
                aria-hidden={true}
                data-css-1pnvt9=""
              >
                I'm normal, see
              </span>
              <span
                data-css-1yk08w2=""
              >
                I'm normal, see
              </span>
            </button>
            <div
              data-css-wvt485=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 14L8 10h9z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        data-css-6ga4kh=""
      >
        Still normal
      </div>
    </label>
    <label
      data-css-1h53i33=""
      onKeyDown={[Function]}
    >
      <div
        data-css-dysqqm=""
      >
        I'm not usable
      </div>
      <div
        data-css-8u2q7u=""
      >
        <div
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              data-css-i9dafq=""
              disabled={true}
              onClick={null}
            >
              <span
                aria-hidden={true}
                data-css-1pnvt9=""
              >
                I'm untouchable
              </span>
              <span
                data-css-1yk08w2=""
              >
                I'm untouchable
              </span>
            </button>
            <div
              data-css-wvt485=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 14L8 10h9z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        data-css-6ga4kh=""
      >
        Neither am I
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots focus autofocus with ref 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            />
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-wvt485=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots focus disabled 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1h53i33=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={true}
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            />
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-wvt485=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots focus onBlur 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            />
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-wvt485=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots focus onFocus 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
            onFocus={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            />
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-wvt485=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots labels all 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Some label
    </div>
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              Some placeholder
            </span>
            <span
              data-css-1yk08w2=""
            >
              Some placeholder
            </span>
          </button>
          <div
            data-css-wvt485=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-6ga4kh=""
    >
      Some sublabel
    </div>
  </label>
</div>
`;

exports[`Storyshots labels label 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Some label
    </div>
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            />
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-wvt485=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots labels label and subLabel 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Some label
    </div>
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            />
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-wvt485=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-6ga4kh=""
    >
      Some sublabel
    </div>
  </label>
</div>
`;

exports[`Storyshots labels none 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            />
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-wvt485=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots labels placeholder 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              some placeholder
            </span>
            <span
              data-css-1yk08w2=""
            >
              some placeholder
            </span>
          </button>
          <div
            data-css-wvt485=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots labels subLabel 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            />
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-wvt485=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-6ga4kh=""
    >
      Some sublabel
    </div>
  </label>
</div>
`;

exports[`Storyshots layouts custom width 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div>
    <div
      style={
        Object {
          "color": "#ababab",
        }
      }
    >
      Value: 
      two
    </div>
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
      style={
        Object {
          "width": 150,
        }
      }
    >
      <div
        data-css-dysqqm=""
      >
        Width 150
      </div>
      <div
        data-css-8u2q7u=""
      >
        <div
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              data-css-i9dafq=""
              disabled={false}
              onChange={[Function]}
              onClick={[Function]}
              value="two"
            >
              <span
                aria-hidden={true}
                data-css-1pnvt9=""
              >
                One item One item One item One item One item One item
              </span>
              <span
                data-css-1qy54zb=""
              >
                Two item
              </span>
            </button>
            <div
              data-css-wvt485=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 14L8 10h9z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-dysqqm=""
      >
        Width determined by longest item
      </div>
      <div
        data-css-8u2q7u=""
      >
        <div
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              data-css-i9dafq=""
              disabled={false}
              onChange={[Function]}
              onClick={[Function]}
              value="two"
            >
              <span
                aria-hidden={true}
                data-css-1pnvt9=""
              >
                One item One item One item One item One item One item
              </span>
              <span
                data-css-1qy54zb=""
              >
                Two item
              </span>
            </button>
            <div
              data-css-wvt485=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 14L8 10h9z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots layouts full width 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    style={
      Object {
        "border": "1px solid blue",
        "width": "500px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      <div
        data-css-dysqqm=""
      >
        First
      </div>
      <div
        data-css-8u2q7u=""
      >
        <div
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              data-css-i9dafq=""
              disabled={false}
              onClick={[Function]}
            >
              <span
                aria-hidden={true}
                data-css-1pnvt9=""
              />
              <span
                data-css-1yk08w2=""
              />
            </button>
            <div
              data-css-wvt485=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 14L8 10h9z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      <div
        data-css-dysqqm=""
      >
        Second
      </div>
      <div
        data-css-8u2q7u=""
      >
        <div
          data-css-in6gqi=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              data-css-i9dafq=""
              disabled={false}
              onClick={[Function]}
            >
              <span
                aria-hidden={true}
                data-css-1pnvt9=""
              />
              <span
                data-css-1yk08w2=""
              />
            </button>
            <div
              data-css-wvt485=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 14L8 10h9z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          data-css-1ha66tv=""
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                clipRule="evenodd"
                d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      <div
        data-css-dysqqm=""
      >
        Third
      </div>
      <div
        data-css-8u2q7u=""
      >
        <div
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              data-css-1xu7t6b=""
              disabled={false}
              onClick={[Function]}
            >
              <span
                aria-hidden={true}
                data-css-1pnvt9=""
              />
              <span
                data-css-4goio8=""
              />
            </button>
            <div
              data-css-kojjpx=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 14L8 10h9z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      <div
        data-css-dysqqm=""
      >
        Fourth
      </div>
      <div
        data-css-8u2q7u=""
      >
        <div
          data-css-in6gqi=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              data-css-1xu7t6b=""
              disabled={false}
              onClick={[Function]}
            >
              <span
                aria-hidden={true}
                data-css-1pnvt9=""
              />
              <span
                data-css-4goio8=""
              />
            </button>
            <div
              data-css-kojjpx=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 14L8 10h9z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          data-css-1ha66tv=""
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                clipRule="evenodd"
                d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots layouts right-aligned 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    style={
      Object {
        "border": "1px solid blue",
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
      >
        <div
          data-css-8u2q7u=""
        >
          <div
            data-css-ctre2o=""
          >
            <div
              data-css-ne3jjf=""
            >
              <button
                data-css-1xu7t6b=""
                disabled={false}
                onClick={[Function]}
              >
                <span
                  aria-hidden={true}
                  data-css-1pnvt9=""
                >
                  Filter
                </span>
                <span
                  data-css-4goio8=""
                >
                  Filter
                </span>
              </button>
              <div
                data-css-kojjpx=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.5 14L8 10h9z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
    <div
      style={
        Object {
          "border": "3px solid green",
          "height": "50px",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots menu divider 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Level
    </div>
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              Three and the amazing item
            </span>
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-wvt485=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots menu in stack 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div>
    <div>
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
      >
        <div
          data-css-dysqqm=""
        >
          Level
        </div>
        <div
          data-css-8u2q7u=""
        >
          <div
            data-css-ctre2o=""
          >
            <div
              data-css-ne3jjf=""
            >
              <button
                data-css-i9dafq=""
                disabled={false}
                onClick={[Function]}
              >
                <span
                  aria-hidden={true}
                  data-css-1pnvt9=""
                >
                  Three and the amazing item
                </span>
                <span
                  data-css-1yk08w2=""
                >
                  Select one
                </span>
              </button>
              <div
                data-css-wvt485=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.5 14L8 10h9z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
    <div>
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
      >
        <div
          data-css-dysqqm=""
        >
          Level
        </div>
        <div
          data-css-8u2q7u=""
        >
          <div
            data-css-ctre2o=""
          >
            <div
              data-css-ne3jjf=""
            >
              <button
                data-css-i9dafq=""
                disabled={false}
                onClick={[Function]}
              >
                <span
                  aria-hidden={true}
                  data-css-1pnvt9=""
                >
                  Three and the amazing item
                </span>
                <span
                  data-css-1yk08w2=""
                >
                  Select another one
                </span>
              </button>
              <div
                data-css-wvt485=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.5 14L8 10h9z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots menu nested 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Level
    </div>
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              Three and the amazing item
            </span>
            <span
              data-css-1yk08w2=""
            >
              Select another one
            </span>
          </button>
          <div
            data-css-wvt485=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots menu onClicks 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Level
    </div>
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-in6gqi=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-1xu7t6b=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              Three and the amazing item
            </span>
            <span
              data-css-4goio8=""
            >
              Select another one
            </span>
          </button>
          <div
            data-css-kojjpx=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        data-css-1ha66tv=""
      >
        <div
          data-css-7dab2f=""
        >
          <svg
            aria-label="warning icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              clipRule="evenodd"
              d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots menu single list 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Level
    </div>
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              Three and the amazing item
            </span>
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-wvt485=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots menu single list w/ icon 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Level
    </div>
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              Three and the amazing item
            </span>
            <span
              data-css-1yk08w2=""
            >
              Select one
            </span>
          </button>
          <div
            data-css-wvt485=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots menu super long 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Level
    </div>
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              This level really is the longest level that anyone has ever seen. There is none longer
            </span>
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-wvt485=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots menu w/ longer nested menu item label 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Level
    </div>
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              The longest in el mundo. Find me!
            </span>
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-wvt485=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots menu w/ longer placeholder 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Level
    </div>
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              This one is longer than any menu item
            </span>
            <span
              data-css-1yk08w2=""
            >
              This one is longer than any menu item
            </span>
          </button>
          <div
            data-css-wvt485=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots menu w/ subLabel 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Level
    </div>
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              Three and the amazing item
            </span>
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-wvt485=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-6ga4kh=""
    >
      The course level
    </div>
  </label>
</div>
`;

exports[`Storyshots placeholder as pre-selected item 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              Three item
            </span>
            <span
              data-css-1yk08w2=""
            >
              Two item
            </span>
          </button>
          <div
            data-css-wvt485=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots props whitelist title 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Level
    </div>
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
            title="This title should be present"
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              One item
            </span>
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-wvt485=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots whitelist clear 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div>
    <div
      style={
        Object {
          "color": "#ababab",
        }
      }
    >
      Value: 
      two
    </div>
    <button
      onClick={[Function]}
    >
      Clear
    </button>
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-dysqqm=""
      >
        Thing to change
      </div>
      <div
        data-css-8u2q7u=""
      >
        <div
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              data-css-i9dafq=""
              disabled={false}
              onChange={[Function]}
              onClick={[Function]}
              value="two"
            >
              <span
                aria-hidden={true}
                data-css-1pnvt9=""
              >
                Three item
              </span>
              <span
                data-css-1qy54zb=""
              >
                Two item
              </span>
            </button>
            <div
              data-css-wvt485=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 14L8 10h9z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots whitelist name 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8u2q7u=""
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            name="myFieldNameOfPower"
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              I have a form name
            </span>
            <span
              data-css-1yk08w2=""
            >
              I have a form name
            </span>
          </button>
          <div
            data-css-wvt485=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots whitelist onChange 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div>
    <div
      style={
        Object {
          "color": "#ababab",
        }
      }
    >
      Value: 
      two
    </div>
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-dysqqm=""
      >
        Thing to change
      </div>
      <div
        data-css-8u2q7u=""
      >
        <div
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              data-css-i9dafq=""
              disabled={false}
              onChange={[Function]}
              onClick={[Function]}
              value="two"
            >
              <span
                aria-hidden={true}
                data-css-1pnvt9=""
              >
                Three item
              </span>
              <span
                data-css-1qy54zb=""
              >
                Two item
              </span>
            </button>
            <div
              data-css-wvt485=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 14L8 10h9z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;
